(jdk21) Add --enable-preview to Java tasks